Fixed text-wrapping bug

--- a/src/components/CategoriesPage/CategoriesPage.scss
+++ b/src/components/CategoriesPage/CategoriesPage.scss
@@ -1,9 +1,12 @@
 .main {
     &__heading {
+        flex: 1;
         font-size: 3.5rem;
         text-align: center;
         margin: 0rem auto;
         margin-bottom: 1.6rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
         color: white;
     }
 
